kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: saymyname
  name: saymyname
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saymyname
  template:
    metadata:
      labels:
        app: saymyname
    spec:
      containers:
        - image: registry.digitalocean.com/tanmaybhat/saymyname
          name: saymyname
          ports:
            - name: http
              containerPort: 8080
      imagePullSecrets:
      - name: tanmaybhat
