kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: saymyname
  name: saymyname
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app: saymyname
  type: ClusterIP
